文档和配置完善